# bertron-schema

./: .gitignore  404.html  Makefile  README.md  config.public.mk  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Any/: index.html
Attribute/: index.html
AttributeValue/: index.html
BERSourceType/: index.html
Boolean/: index.html
Coordinates/: index.html
Curie/: index.html
DataCollection/: index.html
DataTypeTagType/: index.html
Dataset/: index.html
DatasetCollection/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DecimalDegree/: index.html
Double/: index.html
Entity/: index.html
EntityType/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
Name/: index.html
NameType/: index.html
NamedQuantityValue/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PersonStatus/: index.html
QuantityValue/: index.html
Sparqlpath/: index.html
String/: index.html
TextValue/: index.html
Time/: index.html
Unit/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
alt_ids/: index.html
alt_names/: index.html
alt_titles/: index.html
altitude/: index.html
attribute/: index.html
ber_data_source/: index.html
bertron-schema/: CONTRIBUTING.md  config.public.mk  index.html  mkdocs.yml  pyproject.toml
birth_date/: index.html
coordinates/: index.html
credit_metadata/: index.html
(+82 files in other folders)
