[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "bertron_schema"
description = "LinkML schema for ber data intergration work"
authors = [
  {name = "Chuck Parker", email = "ctparker@lbl.gov"},
]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/bertron_schema/schema", "project"]
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.1.24",
]

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
linkml = ">=1.3.5"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
